2003-04-02  Richard Williamson  <rjw@apple.com>

        Raise exceptions when these methods are called inappropriately.
        
        Reviewed by Trey.

        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList goBack]):
        (-[WebBackForwardList goForward]):
        (-[WebBackForwardList goToItem:]):

2003-04-02  Richard Williamson  <rjw@apple.com>

        Added new API on WebFrame, loadData: and loadString:
        
        Reviewed by Maciej.

        Fixed loading of cocoa plugins.
        
        Reviewed by Chris.
        
        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList _entries]):
        * Plugins.subproj/WebBasePluginPackage.h:
        * Plugins.subproj/WebBasePluginPackage.m:
        (-[WebBasePluginPackage bundle]):
        * Plugins.subproj/WebPluginDatabase.h:
        * Plugins.subproj/WebPluginDatabase.m:
        (-[WebPluginDatabase init]):
        (-[WebPluginDatabase loadPluginIfNeededForMIMEType:]):
        (-[WebPluginDatabase dealloc]):
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate connection:willSendRequest:redirectResponse:]):
        (-[WebBaseResourceHandleDelegate connection:didReceiveResponse:]):
        * WebView.subproj/WebDataProtocol.h: Added.
        * WebView.subproj/WebDataProtocol.m: Added.
        (-[WebDataRequestParameters copyWithZone:]):
        (-[WebDataRequestParameters mutableCopyWithZone:]):
        (-[WebDataRequestParameters dealloc]):
        (+[NSURLRequest _webDataRequestURLForData:]):
        (-[NSURLRequest _webDataRequestParameters]):
        (-[NSURLRequest _webDataRequestData]):
        (-[NSURLRequest _webDataRequestSetData:]):
        (-[NSURLRequest _webDataRequestEncoding]):
        (-[NSURLRequest _webDataRequestSetEncoding:]):
        (-[NSURLRequest _webDataRequestBaseURL]):
        (-[NSURLRequest _webDataRequestSetBaseURL:]):